<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.dcsa.conformance</groupId>
    <artifactId>sandbox</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>dcsa-conformance-sandbox</name>
    <description>DCSA Conformance Sandbox</description>
    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.dcsa.conformance</groupId>
            <artifactId>core</artifactId>
            <version>0.0.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.dcsa.conformance</groupId>
            <artifactId>booking</artifactId>
            <version>0.0.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.dcsa.conformance</groupId>
			<artifactId>ebl</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
			<dependency>
				<groupId>org.dcsa.conformance</groupId>
				<artifactId>pint</artifactId>
				<version>0.0.1-SNAPSHOT</version>
			</dependency>
		<dependency>
			<groupId>org.dcsa.conformance</groupId>
            <artifactId>ebl-issuance</artifactId>
            <version>0.0.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.dcsa.conformance</groupId>
            <artifactId>ebl-surrender</artifactId>
            <version>0.0.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.dcsa.conformance</groupId>
            <artifactId>ovs</artifactId>
            <version>0.0.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.dcsa.conformance</groupId>
            <artifactId>tnt</artifactId>
            <version>0.0.1-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.30</version>
            <optional>true</optional>
        </dependency>

        <!-- https://mvnrepository.com/artifact/software.amazon.awssdk/dynamodb -->
        <dependency>
            <groupId>software.amazon.awssdk</groupId>
            <artifactId>dynamodb</artifactId>
            <version>2.24.9</version>
        </dependency>
    </dependencies>
</project>
